@@ -12,12 +12,17 @@
 	</parent>
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<ignite.version>2.7.6</ignite.version>
+		<maven.compiler.source>13</maven.compiler.source>
+		<maven.compiler.target>13</maven.compiler.target>
+		<java.version>13</java.version>
+		<ignite.version>2.8.0</ignite.version>
 		<hbase.version>2.2.0</hbase.version>
 		<h2.version>1.4.197</h2.version>
 		<log4j.version>2.11.2</log4j.version>
+		<guava.version>28.0-jre</guava.version>
+		<javax.annotation.version>1.3.2</javax.annotation.version>
+		<hadoop.version>3.2.1</hadoop.version>
+		<JAVA_8_HOME>E:/eclipse-workspace-gsworkflow/java/adopt-jdk-8.0.252.09-hotspot</JAVA_8_HOME>
 	</properties>
 	<packaging>pom</packaging>
 	<modules>
@@ -36,14 +41,40 @@
 		<module>../WorkFlowProcessAndPublishThumbImages</module>
 		<module>../WorkflowProcessAndPublishExifData</module>
 		<module>../WorkFlowStorms</module>
+		<module>../WorkFlowArchiveFile</module>
 		<module>../WorkFlowMonitor</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-distcp</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-yarn-server-nodemanager</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-client</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-hdfs</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.ignite</groupId>
 				<artifactId>ignite-core</artifactId>
 				<version>${ignite.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-auth</artifactId>
+				<version>${hadoop.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.ignite</groupId>
@@ -90,6 +121,73 @@
 				<artifactId>hbase-mapreduce</artifactId>
 				<version>${hbase.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.hbase</groupId>
+				<artifactId>hbase-protocol</artifactId>
+				<version>${hbase.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hbase</groupId>
+				<artifactId>hbase-endpoint</artifactId>
+				<version>${hbase.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+				<version>${javax.annotation.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>13</source>
+						<target>13</target>
+						<compilerArgs>
+							<compilerArg>--enable-preview</compilerArg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M4</version>
+					<configuration>
+						<argLine>--enable-preview</argLine>
+						<systemProperties>
+							<property>
+								<name>user.home</name>
+								<value>./src/test/resources</value>
+							</property>
+						</systemProperties>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<mainClass>${start-class}</mainClass>
+						<layout>ZIP</layout>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>repackage</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
